--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,78 +6,80 @@ license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[build-dependencies]
-vergen = { version = "6.0.0", default-features = false, features = [
-    "build",
-    "rustc",
-    "git",
-] }
+#[build-dependencies]
+#vergen = { version = "6.0.0", default-features = false, features = [
+#    "build",
+#    "rustc",
+#    "git",
+#] }
 
-[dependencies]
-clap = { version = "3.0.10", features = [
-    "derive",
-    "env",
-    "unicode",
-    "wrap_help",
-] }
-clap_complete = "3.0.4"
-forge-fmt = { path = "../fmt" }
-foundry-utils = { path = "../utils" }
-forge = { path = "../forge" }
-foundry-config = { path = "../config" }
-cast = { path = "../cast" }
-ui = { path = "../ui" }
-dunce = "1.0.2"
-# ethers = "0.5"
-ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
-eyre = "0.6.5"
-color-eyre = "0.5"
-rustc-hex = "2.1.0"
-serde_json = "1.0.67"
-tokio = { version = "1.11.0", features = ["macros"] }
-regex = { version = "1.5.4", default-features = false }
-ansi_term = "0.12.1"
-rpassword = "5.0.1"
-tracing-error = "0.2.0"
-tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
-tracing = "0.1.26"
-hex = "0.4.3"
-rayon = "1.5.1"
-serde = "1.0.133"
-futures = "0.3.17"
-
-proptest = "1.0.0"
-glob = "0.3.0"
-semver = "1.0.5"
-once_cell = "1.9.0"
-walkdir = "2.3.2"
-solang-parser = "0.1.2"
-similar = { version = "2.1.0", features = ["inline"] }
-console = "0.15.0"
-watchexec = "2.0.0-pre.11"
-atty = "0.2.14"
+#[dependencies]
+#clap = { version = "3.0.10", features = [
+#    "derive",
+#    "env",
+#    "unicode",
+#    "wrap_help",
+#] }
+#clap_complete = "3.0.4"
+#forge-fmt = { path = "../fmt" }
+#foundry-utils = { path = "../utils" }
+#forge = { path = "../forge" }
+#foundry-config = { path = "../config" }
+#cast = { path = "../cast" }
+#ui = { path = "../ui" }
+#dunce = "1.0.2"
+## ethers = "0.5"
+#ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+#eyre = "0.6.5"
+#color-eyre = "0.5"
+#rustc-hex = "2.1.0"
+#serde_json = "1.0.67"
+#tokio = { version = "1.11.0", features = ["macros"] }
+#regex = { version = "1.5.4", default-features = false }
+#ansi_term = "0.12.1"
+#rpassword = "5.0.1"
+#tracing-error = "0.2.0"
+#tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
+#tracing = "0.1.26"
+#hex = "0.4.3"
+#rayon = "1.5.1"
+#serde = "1.0.133"
+#futures = "0.3.17"
+#
+#proptest = "1.0.0"
+#glob = "0.3.0"
+#semver = "1.0.5"
+#once_cell = "1.9.0"
+#walkdir = "2.3.2"
+#solang-parser = "0.1.2"
+#similar = { version = "2.1.0", features = ["inline"] }
+#console = "0.15.0"
+#watchexec = "2.0.0-pre.11"
+#atty = "0.2.14"
 
 [dev-dependencies]
-foundry-utils = { path = "./../utils", features = ["test"] }
-foundry-cli-test-utils = { path = "./test-utils" }
-pretty_assertions = "1.0.0"
-toml = "0.5"
+#foundry-utils = { path = "./../utils", features = ["test"] }
+#foundry-cli-test-utils = { path = "./test-utils" }
+#pretty_assertions = "1.0.0"
+#toml = "0.5"
+#svm = { package = "svm-rs", default-features = false, git = "https://github.com/roynalnaruto/svm-rs", features = ["blocking"] }
+#svm-builds = { package = "svm-rs-builds", git = "https://github.com/roynalnaruto/svm-rs"}
 
-[features]
-default = ["rustls"]
-solc-asm = ["ethers/solc-sha2-asm"]
-rustls = ["ethers/rustls"]
-openssl = ["ethers/openssl"]
+#[features]
+#default = ["rustls"]
+#solc-asm = ["ethers/solc-sha2-asm"]
+#rustls = ["ethers/rustls"]
+#openssl = ["ethers/openssl"]
 
 # feature for integration tests that test external projects
-external-integration-tests = []
+#external-integration-tests = []
 
-[[bin]]
-name = "cast"
-path = "src/cast.rs"
-doc = false
-
-[[bin]]
-name = "forge"
-path = "src/forge.rs"
-doc = false
+#[[bin]]
+#name = "cast"
+#path = "src/cast.rs"
+#doc = false
+#
+#[[bin]]
+#name = "forge"
+#path = "src/forge.rs"
+#doc = false
