--- a/cli/test-utils/Cargo.toml
+++ b/cli/test-utils/Cargo.toml
@@ -14,4 +14,7 @@ once_cell = "1.9.0"
 foundry-config = { path = "../../config" }
 serde_json = "1.0.67"
 parking_lot = "0.12.0"
-enigo = "0.0.14"
+enigo = {version = "0.0.14" , optional = true }
+
+[features]
+tui-tests = ["enigo"]
