--- a/node/node-core/Cargo.toml
+++ b/node/node-core/Cargo.toml
@@ -9,5 +9,10 @@ ethers-core = { git = "https://github.com/gakonst/ethers-rs" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 
+# trie
+hash-db = { version = "0.15", default-features = false }
+hash256-std-hasher = { version = "0.15", default-features = false }
+triehash = { version = "0.8", default-features = false }
+
 [dev-dependencies]
 rand = "0.8"
