--- a/node/node-core/Cargo.toml
+++ b/node/node-core/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+# foundry internal
+foundry-evm = { path = "../../evm" }
+
 ethers-core = { git = "https://github.com/gakonst/ethers-rs" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
