--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -31,6 +31,7 @@ futures = "0.3"
 
 chrono = "0.4.0"
 serde_json = "1.0.67"
+serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.30"
 async-trait = "0.1.53"
 
