--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -12,7 +12,7 @@ foundry-utils = { path = "../utils" }
 
 # evm support
 bytes = "1.1.0"
-ethers = { git = "https://github.com/gakonst/ethers-rs" }
+ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws"] }
 
 # axum related
 axum = {version = "0.5", features = ["ws"] }
