--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -34,6 +34,7 @@ serde_json = "1.0.67"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.30"
 async-trait = "0.1.53"
+colored = "2.0.0"
 
 [dev-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen", "legacy"] }
