--- a/binder/Cargo.toml
+++ b/binder/Cargo.toml
@@ -14,6 +14,10 @@ keywords = ["ethereum", "web3", "solidity"]
 [dependencies]
 foundry-config = { path = "../config" }
 ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["async", "svm-solc", "project-util"] }
-
+ethers-contract = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["abigen"] }
+curl = { version = "0.4", features = ["http2"] }
 eyre = "0.6"
 git2 = "0.13"
+url = "2.2"
+tracing = "0.1.33"
+tempfile = "3.3.0"
