--- a/forge/Cargo.toml
+++ b/forge/Cargo.toml
@@ -6,9 +6,8 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 foundry-utils = { path = "./../utils" }
-foundry-config = { path = "../config" }
+foundry-config = { path = "./../config" }
 foundry-evm = { path = "./../evm" }
-
 
 ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full"] }
 eyre = "0.6.5"
