--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -3,6 +3,9 @@ name = "anvil"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+description = """
+foundry's local ethereum node
+"""
 
 [[bin]]
 name = "anvil"
