--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -26,13 +26,16 @@ foundry-evm = { path = "../evm" }
 anvil-core = { path = "anvil-core" }
 anvil-rpc = { path = "anvil-rpc" }
 foundry-utils = { path = "../utils" }
+foundry-common = { path = "../common", optional = true }
+forge = { path = "../forge", optional = true }
+foundry-config = { path = "../config", optional = true }
 
 # evm support
 bytes = "1.1.0"
 ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws"] }
 
 # axum related
-axum = {version = "0.5", features = ["ws"] }
+axum = { version = "0.5", features = ["ws"] }
 hyper = "0.14"
 tower = "0.4"
 tower-http = { version = "0.2", features = ["trace"] }
@@ -58,12 +61,11 @@ clap = { version = "3.0.10", features = [
     "env",
     "wrap_help",
 ], optional = true }
-foundry-config = { path = "../config", optional = true }
 
 [dev-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen", "legacy"] }
 tokio = { version = "1.10", features = ["full"] }
 
 [features]
-cmd = ["clap", "foundry-config"]
+cmd = ["clap", "foundry-config", "foundry-common", "forge"]
 cli = ["tokio/full", "cmd"]
