temporarily cease docker build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,7 @@ jobs:
 
   release-docker:
     name: Release Docker
+    if: false
     uses: ./.github/workflows/docker-publish.yml
 
   release:
