--- a/testdata/foundry.toml
+++ b/testdata/foundry.toml
@@ -5,6 +5,7 @@ block_coinbase = '0x0000000000000000000000000000000000000000'
 block_difficulty = 0
 block_number = 0
 block_timestamp = 0
+bytecode_hash = 'ipfs'
 cache = true
 cache_path = 'cache'
 evm_version = 'london'
@@ -27,10 +28,11 @@ no_storage_caching = false
 offline = false
 optimizer = true
 optimizer_runs = 200
-out = './out'
+out = 'out'
 remappings = ['ds-test/=lib/ds-test/src/']
 sender = '0x00a329c0648769a73afac7f9381e08fb43dbea72'
 sizes = false
+sparse_mode = false
 src = 'src'
 test = 'test'
 tx_origin = '0x00a329c0648769a73afac7f9381e08fb43dbea72'
