--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -20,6 +20,7 @@ ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features =
 ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["async", "svm-solc"] }
 Inflector = "0.11.4"
 regex = "1.5.5"
+globset = "0.4.8"
 
 [dev-dependencies]
 pretty_assertions = "1.0.0"
