--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,3 +57,7 @@ debug = 0
 #ethers-signers = { path = "../ethers-rs/ethers-signers" }
 #ethers-etherscan = { path = "../ethers-rs/ethers-etherscan" }
 #ethers-solc = { path = "../ethers-rs/ethers-solc" }
+
+
+[patch."https://github.com/bluealloy/revm"]
+revm = { path = "../revm/crates/revm" }
