--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -66,6 +66,7 @@ async-trait = "0.1.53"
 
 [dev-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen", "legacy"] }
+pretty_assertions = "1.2.1"
 tokio = { version = "1.10", features = ["full"] }
 
 [features]
