--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -63,6 +63,7 @@ clap = { version = "3.0.10", features = [
     "wrap_help",
 ], optional = true }
 async-trait = "0.1.53"
+chrono = "0.4.19"
 
 [dev-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen", "legacy"] }
