--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -64,6 +64,7 @@ clap = { version = "3.0.10", features = [
 ], optional = true }
 async-trait = "0.1.53"
 chrono = "0.4.19"
+auto_impl = "0.5.0"
 
 [dev-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen", "legacy"] }
