--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -67,7 +67,7 @@ chrono = "0.4.19"
 auto_impl = "0.5.0"
 
 [dev-dependencies]
-ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen", "legacy"] }
+ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
 pretty_assertions = "1.2.1"
 tokio = { version = "1.10", features = ["full"] }
 
