--- a/cli/test-utils/Cargo.toml
+++ b/cli/test-utils/Cargo.toml
@@ -9,8 +9,11 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/foundry-rs/foundry"
 
 [dependencies]
+foundry-utils = { path = "../../utils" }
 tempfile = "3.2.0"
 ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["project-util"] }
+ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+
 walkdir = "2.3.2"
 once_cell = "1.9.0"
 foundry-config = { path = "../../config" }
