--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -20,6 +20,7 @@ eyre = "0.6.5"
 ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["async", "svm-solc"] }
 Inflector = "0.11.4"
+number_prefix = "0.4.0"
 regex = "1.5.5"
 #globset = { version = "0.4.8", features = ["serde1"] }
 globset = "0.4.8"
