--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,7 @@ members = [
     "fmt",
     "forge",
     "ui",
-    "utils",
-]
+    "utils", ]
 
 [profile.dev]
 # Disabling debug info speeds up builds a bunch,
