--- a/Cargo.toml
+++ b/Cargo.toml
@@ -465,3 +465,6 @@ solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/sola
 solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
 solar-ast = { package = "solar-ast", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
 solar-sema = { package = "solar-sema", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
+
+[patch."ssh://git@github.com/phylaxsystems/assertion-executor.git"]
+assertion-executor = { path = "../assertion-executor" }
