--- a/crates/cheatcodes/Cargo.toml
+++ b/crates/cheatcodes/Cargo.toml
@@ -23,7 +23,8 @@ vergen = { workspace = true, default-features = false, features = [
 
 
 [dependencies]
-assertion-executor = { git = "ssh://git@github.com/phylaxsystems/assertion-executor.git" }
+assertion-executor = { git = "ssh://git@github.com/phylaxsystems/assertion-executor.git", branch = "feat/revm-18" }
+tokio.workspace = true
 foundry-cheatcodes-spec.workspace = true
 foundry-common.workspace = true
 foundry-compilers.workspace = true
