--- a/crates/cheatcodes/Cargo.toml
+++ b/crates/cheatcodes/Cargo.toml
@@ -23,7 +23,7 @@ vergen = { workspace = true, default-features = false, features = [
 
 
 [dependencies]
-assertion-executor = { git = "ssh://git@github.com/phylaxsystems/assertion-executor.git", branch = "feat/revm-18" }
+assertion-executor = { git = "ssh://git@github.com/phylaxsystems/assertion-executor.git", branch = "feat/revm-18", features = ["phoundry"]  }
 tokio.workspace = true
 foundry-cheatcodes-spec.workspace = true
 foundry-common.workspace = true
@@ -77,4 +77,5 @@ tracing.workspace = true
 walkdir.workspace = true
 proptest.workspace = true
 serde.workspace = true
+tokio-util = "0.7.13"
 
