--- a/crates/forge/Cargo.toml
+++ b/crates/forge/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "phorge"
+name = "forge"
 description = "Fast and flexible Ethereum testing framework"
 
 version.workspace = true
