--- a/crates/cheatcodes/Cargo.toml
+++ b/crates/cheatcodes/Cargo.toml
@@ -22,11 +22,8 @@ vergen = { workspace = true, default-features = false, features = [
 ] }
 
 [dependencies]
-# assertion-executor = { git = "ssh://git@github.com/phylaxsystems/assertion-executor.git", branch = "main", features = ["phoundry"]  }
+assertion-executor = { git = "ssh://git@github.com/phylaxsystems/assertion-executor.git", rev = "1cbbf30" }
 
-assertion-executor = { path = "../../../assertion-executor" }
-
-tokio.workspace = true
 foundry-cheatcodes-spec.workspace = true
 foundry-common.workspace = true
 foundry-compilers.workspace = true
