--- a/crates/cheatcodes/Cargo.toml
+++ b/crates/cheatcodes/Cargo.toml
@@ -22,8 +22,7 @@ vergen = { workspace = true, default-features = false, features = [
 ] }
 
 [dependencies]
-assertion-executor = { git = "ssh://git@github.com/phylaxsystems/assertion-executor.git", rev = "6f74915" }
-
+assertion-executor = { git = "ssh://git@github.com/phylaxsystems/assertion-executor.git", version = "0.1.0" }
 foundry-cheatcodes-spec.workspace = true
 foundry-common.workspace = true
 foundry-compilers.workspace = true
