--- a/crates/fmt/Cargo.toml
+++ b/crates/fmt/Cargo.toml
@@ -20,10 +20,10 @@ solar.workspace = true
 
 itertools.workspace = true
 similar = { version = "2", features = ["inline"] }
-tracing.workspace = true
-tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 
 [dev-dependencies]
+foundry-test-utils.workspace = true
+
 itertools.workspace = true
 similar-asserts.workspace = true
 toml.workspace = true
