--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,6 +41,8 @@ jobs:
       - uses: rui314/setup-mold@725a8794d15fc7563f59595bd9556495c0564878 # v1
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@7d986dd989559c6ecdb630a3fd2557667be217ad # v0.0.9
+      - name: List contents of ~/.foundry/cache
+        run: ls -R ~/.foundry/cache
       - name: Build documentation
         run: cargo doc --workspace --all-features --no-deps --document-private-items
         env:
