--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,17 +3,34 @@ name: docker
 permissions: {}
 
 on:
-  # Trigger without any parameters a proactive rebuild
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      tag_name:
+        default: nightly
+        description: The tag we're building for
+        type: string
+      rust_profile:
+        default: maxperf
+        description: The Rust profile to build with
+        type: string
+      rust_features:
+        default: aws-kms,gcp-kms,cli,asm-keccak,js-tracer
+        description: The Rust features to build with
+        type: string
   workflow_call:
     inputs:
       tag_name:
         required: true
         type: string
+      rust_profile:
+        required: true
+        type: string
+      rust_features:
+        required: true
+        type: string
 
 env:
   REGISTRY: ghcr.io
-  # Will resolve to foundry-rs/foundry
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -24,24 +41,15 @@ jobs:
       contents: read
       id-token: write
       packages: write
-    timeout-minutes: 120
+    timeout-minutes: 60
     steps:
       - uses: actions/checkout@v5
         with:
           persist-credentials: false
-      - uses: dtolnay/rust-toolchain@e97e2d8cc328f1b50210efc529dca0028893a2d9 # master
-        with:
-          toolchain: stable
-      - uses: rui314/setup-mold@725a8794d15fc7563f59595bd9556495c0564878 # v1
-      - name: Install gcc aarch64
-        id: aarch_64_setup
-        run: |
-          sudo apt update && sudo apt install -y gcc-aarch64-linux-gnu
+
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Login into registry ${{ env.REGISTRY }}
-        # Ensure this doesn't trigger on PR's
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -80,5 +88,20 @@ jobs:
           printf "TAGS -> %s\n" "${{ steps.docker_tagging.outputs.docker_tags }}"
           printf "LABELS -> %s\n" "${{ steps.meta.outputs.labels }}"
 
-      - name: Build and push foundry image
-        run: make DOCKER_IMAGE_NAME=${{ steps.docker_tagging.outputs.docker_tags }} CARGO_TAG_NAME=${{ inputs.tag_name }} PROFILE=maxperf docker-build-push
+      - name: Set up Depot CLI
+        uses: depot/setup-action@b0b1ea4f69e92ebf5dea3f8713a1b0c37b2126a5 # v1
+
+      - name: Build and push Foundry image
+        uses: depot/build-push-action@9785b135c3c76c33db102e45be96a25ab55cd507 # v1
+        with:
+          build-args: |
+            RUST_PROFILE=${{ inputs.rust_profile }}
+            RUST_FEATURES=${{ inputs.rust_features }}
+            TAG_NAME=${{ inputs.tag_name }}
+            VERGEN_GIT_SHA=${{ github.sha }}
+          project: zb6mp8tkd7
+          context: .
+          tags: ${{ steps.docker_tagging.outputs.docker_tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
+          push: true
