--- a/Cargo.toml
+++ b/Cargo.toml
@@ -183,7 +183,7 @@ walkdir.opt-level = 3
 # Override packages which aren't perf-sensitive for faster compilation speed and smaller binary size.
 [profile.release.package]
 alloy-sol-macro-expander.opt-level = "z"
-figment.opt-level = "z"
+figment2.opt-level = "z"
 foundry-compilers-artifacts-solc.opt-level = "z"
 foundry-config.opt-level = "z"
 html5ever.opt-level = "z"
@@ -342,7 +342,7 @@ dunce = "1"
 evm-disassembler = "0.6"
 evmole = "0.8"
 eyre = "0.6"
-figment = "0.10"
+figment2 = "0.11"
 futures = { version = "0.3", default-features = false }
 hyper = "1.8"
 indicatif = "0.18"
