--- a/Cargo.toml
+++ b/Cargo.toml
@@ -461,7 +461,7 @@ rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6
 # foundry-fork-db = { git = "https://github.com/foundry-rs/foundry-fork-db", rev = "b4299fc" }
 
 # solar
-solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
-solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
-solar-ast = { package = "solar-ast", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
-solar-sema = { package = "solar-sema", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
+solar = { package = "solar-compiler", path = "../solar-development/crates/cli" }
+solar-interface = { package = "solar-interface", path = "../solar-development/crates/interface" }
+solar-ast = { package = "solar-ast", path = "../solar-development/crates/ast" }
+solar-sema = { package = "solar-sema", path = "../solar-development/crates/sema" }
